// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have checkbox checked when status given as true 1`] = `
<div
  className="toDoItem"
>
  <input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <p>
    Wake up early
  </p>
</div>
`;

exports[`Should have checkbox unchecked when status given as false 1`] = `
<div
  className="toDoItem"
>
  <input
    checked={false}
    readOnly={true}
    type="checkbox"
  />
  <p>
    Wake up early
  </p>
</div>
`;

exports[`Should have className as "toDoItem" and should contain task 1`] = `
<div
  className="toDoItem"
>
  <input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <p>
    Wake up early
  </p>
</div>
`;
